# tensorbench

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  conanfile.txt  readme.md  results.txt  run_benchmark.sh  tbdb-2024-12-18.h5  tbdb.h5
analysis/: 2021-08-22-analysis.py  2022-03-22-analysis.py  2024-12-18-analysis.py  analysis.py  tbdb-2021-08-22-eigen-3.3.7.h5  tbdb-2021-08-22-eigen-3.4.0.h5  tbdb-2021-08-23-eigen-3.4.0-tblis-openblas-kraken.h5  tbdb-2021-08-23-eigen-3.4.0-tblis-openblas.h5  tbdb-2021-08-23-eigen-3.4.0-tblis.h5  tbdb-2021-08-23-eigen-3.4.0.h5  tbdb-2022-03-22.h5  tbdb-2022-03-23.h5  tbdb-2022-03-24-tic.h5  tbdb-2022-03-24.h5  tbdb-2022-03-25.h5  tbdb.h5  tmp.py
analysis/2020-09-21/: 2020-09-21-analysis.py
analysis/2023-04-18/: slack.mplstyle  tensor-diagram.odp
analysis/2024-12-18/: fig_ops_vs_cores_maxbond.py  fig_type_vs_bond.sub_ops_vs_cores.py
analysis/src/general/: filter.py  natural_sort.py
analysis/src/io/: h5ops.py
analysis/src/plotting/: entanglement_entropy_chain.py  filter.py  multiplot.py  multiplot_Energy_distribution.py  multiplot_S_distribution.py  multiplot_S_distribution_diff.py  multiplot_S_distribution_vs_Delta.py  multiplot_S_vs_Delta.py  multiplot_S_vs_Length.py  multiplot_S_vs_Site.py  multiplot_S_vs_Site_over_time.py  multiplot_S_vs_eps_scatter.py  multiplot_S_vs_ewin_scatter.py  multiplot_S_vs_var_scatter.py  multiplot_Smid_vs_max_time.py  multiplot_Sq_vs_Length.py  multiplot_Sq_vs_Site.py  multiplot_Sq_vs_Site_log2.py  multiplot_chi_distribution.py  multiplot_chi_vs_Delta.py  multiplot_delta_distribution.py  multiplot_e_vs_delta_and_lambda.py  multiplot_energy_distribution.py  multiplot_iter_distribution.py  multiplot_mem_distribution.py  multiplot_par_distribution.py  multiplot_schmidt.py  multiplot_time_distribution.py  multiplot_time_vs_Delta.py  multiplot_var_distribution.py  multiplot_var_vs_Delta.py  plot.py  style.py  tools.py
cmake/: BuildDependency.cmake  CompilerFlags.cmake  Deprecation.cmake  FindLapacke.cmake  FindMKL.cmake  Findcyclops.cmake  Findtblis.cmake  InstallPackage.cmake  PrintHostInfo.cmake  PrintOptionInfo.cmake  PrintTargetInfo.cmake  SetupDependencies.cmake  SetupDependenciesCMake.cmake  SetupDependenciesConan.cmake  SetupDependenciesFetch.cmake  SetupDependenciesFind.cmake  SetupPaths.cmake  getExpandedTarget.cmake  toolchain-default.cmake
cmake-modules/: BuildDependency.cmake  CompilerFlags.cmake  Fetch_h5pp.cmake  PrintOptionInfo.cmake  SetupDependenciesConan.cmake  SetupDependenciesFetch.cmake
cmake-modules/external_Eigen3/: CMakeLists.txt
cmake-modules/external_h5pp/: CMakeLists.txt
cmake/cmake_dependency_provider/: cmake_installer.cmake
cmake/cmake_dependency_provider/external_OpenBLAS/: CMakeLists.txt
cmake/cmake_dependency_provider/external_TBLIS/: CMakeLists.txt
cmake/cmake_dependency_provider/external_acrotensor/: CMakeLists.txt
cmake/cmake_dependency_provider/external_cyclops/: CMakeLists.txt  ctf.8f1c199.patch
cmake/cmake_dependency_provider/external_h5pp/: CMakeLists.txt
cmake/cmake_dependency_provider/external_hptt/: CMakeLists.txt  hptt.9425386.patch
cmake/cmake_dependency_provider/external_matx/: CMakeLists.txt
cmake/cmake_dependency_provider/external_scalapack/: CMakeLists.txt
cmake/cmake_dependency_provider/external_tblis/: CMakeLists.txt
cmake/cmake_dependency_provider/external_xsimd/: CMakeLists.txt
cmake/cmake_dependency_provider/external_xtensor/: CMakeLists.txt
cmake/cmake_dependency_provider/external_xtensor-blas/: CMakeLists.txt
cmake/cmake_dependency_provider/external_xtl/: CMakeLists.txt
cmake/external_Eigen3/: CMakeLists.txt
cmake/external_OpenBLAS/: CMakeLists.txt
cmake/external_acrotensor/: CMakeLists.txt
cmake/external_cyclops/: CMakeLists.txt
cmake/external_tblis/: CMakeLists.txt
cmake/external_xsimd/: CMakeLists.txt
cmake/external_xtensor/: CMakeLists.txt
cmake/external_xtensor-blas/: CMakeLists.txt
cmake/external_xtl/: CMakeLists.txt
cmake/modules/: FindMKL.cmake  FindcuTensorNet.cmake  Findcyclops.cmake  Findhptt.cmake  Findtblis.cmake
output/: tbdb-2021-08-22.17:28:52.h5  tbdb-2021-08-23.h5
results/: clang-10-shared-mkl-omp-8t.txt  clang-10-shared-noblas-omp-8t.txt  clang-10-shared-openblas-omp-8t.txt  gcc-10-shared-mkl-omp-8t.txt  gcc-10-shared-noblas-omp-8t.txt  gcc-10-shared-openblas-omp-8t.txt
slurm/: submit_to_draken  submit_to_queue  submit_to_tetralith  tbdb.h5
slurm/logs/: log.e
source/: main.cpp
source/benchmark/: benchmark.h  run.cpp  tensor_product_cute.cpp  tensor_product_cute.cu  tensor_product_cutensor.cpp  tensor_product_cutensor.cu  tensor_product_cyclops.cpp  tensor_product_eigen1.cpp  tensor_product_eigen2.cpp  tensor_product_eigen3.cpp  tensor_product_matx.cpp  tensor_product_matx.cu  tensor_product_tblis.cpp  tensor_product_xtensor.cpp
source/benchmarks/: benchmarks.h  tensor_product_cute.cu  tensor_product_cyclops.cpp  tensor_product_eigen1.cpp  tensor_product_eigen2.cpp  tensor_product_eigen3.cpp  tensor_product_tblis.cpp  tensor_product_xtensor.cpp
source/config/: config.cpp  config.cu  config.h  parse.cpp
source/contract/: contract.h  hamiltonian_squared_dot_psi_acro.cu  hamiltonian_squared_dot_psi_cuda.cpp  hamiltonian_squared_dot_psi_cuda.cu  hamiltonian_squared_dot_psi_cute.cu  hamiltonian_squared_dot_psi_v1.cpp  hamiltonian_squared_dot_psi_v2.cpp  hamiltonian_squared_dot_psi_v3.cpp  tensor_product_cute.cu  tensor_product_cyclops.cpp  tensor_product_eigen1.cpp  tensor_product_eigen2.cpp  tensor_product_eigen3.cpp  tensor_product_tblis.cpp  tensor_product_xtensor.cpp
source/debug/: exceptions.h  stacktrace.cpp  stacktrace.h
source/general/: enums.h  nmspc_tensor_extra.h  nmspc_tensor_omp.h  sfinae.h  sfinae_eigen.h
source/math/: cast.h  num.h  stat.h  tenx.h
source/math/tenx/: sfinae.h  span.h  threads.cpp  threads.h
source/mpi/: mpi-tools.cpp  mpi-tools.h
source/storage/: results.cpp  results.h
source/tid/: CMakeLists.txt  enums.h  tid.cpp  tid.h  token.cpp  ur.cpp
source/tools/: class_tic_toc.cpp  log.h  prof.cpp  prof.h
(+1 files in other folders)
